OOP php lesson 1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,11 @@ services:
     volumes:
           # <path>
             
-      
+services:
+  php:
+    buidl:
+      context:
+      dockerfile: dockerfile
+    command: php -s 0.0.0.80
+    volumos:
+      - ""
