--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ servicess:
       ports:
         - "8080:80"
 
+    composer:
+      image: composer
+      volumes:
+         - /var/www/practice/php/php-calculator-app:/var/www/html
 
 # version: "3.8"
 
